RESOLVED FIXED222925
[Cocoa] Changes in WebInspectorUI's appearance don't propagate to .effectiveAppearance while docked
https://bugs.webkit.org/show_bug.cgi?id=222925
Summary [Cocoa] Changes in WebInspectorUI's appearance don't propagate to .effectiveA...
Blaze Burg
Reported 2021-03-08 11:43:58 PST
.
Attachments
Patch v1.0 (4.14 KB, patch)
2021-03-08 11:48 PST, Blaze Burg
no flags
Blaze Burg
Comment 1 2021-03-08 11:44:15 PST
Blaze Burg
Comment 2 2021-03-08 11:48:55 PST
Created attachment 422594 [details] Patch v1.0
Devin Rousso
Comment 3 2021-03-08 13:17:51 PST
Comment on attachment 422594 [details] Patch v1.0 View in context: https://bugs.webkit.org/attachment.cgi?id=422594&action=review r=me with one question/concern > Source/WebKit/UIProcess/Inspector/mac/WebInspectorProxyMac.mm:862 > + [m_inspectorViewController webView].appearance = platformAppearance; Does this have any effect on the inspected page when Web Inspector is docked and the developer changes the Appearance setting in the General pane of the Settings Tab?
Blaze Burg
Comment 4 2021-03-08 13:50:36 PST
Comment on attachment 422594 [details] Patch v1.0 View in context: https://bugs.webkit.org/attachment.cgi?id=422594&action=review >> Source/WebKit/UIProcess/Inspector/mac/WebInspectorProxyMac.mm:862 >> + [m_inspectorViewController webView].appearance = platformAppearance; > > Does this have any effect on the inspected page when Web Inspector is docked and the developer changes the Appearance setting in the General pane of the Settings Tab? It's just for the inspector WebView (m_inspectorPage). The inspected webView will follow the appearance of the client (i.e. Safari) until set otherwise.
EWS
Comment 5 2021-03-08 14:10:10 PST
Committed r274106: <https://commits.webkit.org/r274106> All reviewed patches have been landed. Closing bug and clearing flags on attachment 422594 [details].
Note You need to log in before you can comment on or make changes to this bug.