[Cocoa] Changes in WebInspectorUI's appearance don't propagate to .effectiveAppearance while docked https://bugs.webkit.org/show_bug.cgi?id=222925 <rdar://71201454>

Reviewed by Devin Rousso.

Update the appearance property for the underlying webView in addition to
setting it for the inspector NSWindow (undocked only).

This fix is needed for both local and remote inspector code paths.

* UIProcess/Inspector/mac/RemoteWebInspectorProxyMac.mm:
(WebKit::RemoteWebInspectorProxy::platformSetForcedAppearance):
* UIProcess/Inspector/mac/WebInspectorProxyMac.mm:
(WebKit::WebInspectorProxy::applyForcedAppearance):


Canonical link: https://commits.webkit.org/235037@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@274106 268f45cc-cd09-0410-ab3c-d52691b4dbfc